# venus

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  demo.cpp  helpers.h  helpers.hpp  main.cpp  main.cxx  sequential.h  sequential.hpp  test_sequential.cpp  test_var_type_dict.cpp  var_type_dict.h  var_type_dict.hpp  vector.ixx
.github/workflows/: build_demos.yml  clang-apple.yml  clang-cl-win.yml  clang-linux.yml  clang-tidy.yml  gcc-linux.yml  generate_single_header.yml  msvc-win.yml  update_readme.yml
assets/: venus_logo.svg:Zone.Identifier
core/: helpers.hpp  sequential.hpp  traits.hpp  var_type_dict.hpp  venus.hpp
core/memory/: allocators.hpp  contiguous_memory.hpp  device.hpp  lower_access.hpp
core/policies/: policy_concepts.hpp  policy_container.hpp  policy_macro_begin.hpp  policy_macro_end.hpp  policy_ops.hpp
core/tensor/: eager_ops.hpp  range_ops.hpp  shape.hpp  tensor.hpp
core/venus/: nested_initializer_list.hpp  repl.hpp  sequential.hpp  str.hpp  traits.hpp  var_type_dict.hpp
core/venus/compat/: ops.hpp  zip.hpp
core/venus/memory/: allocators.hpp  contiguous_memory.hpp  device.hpp
core/venus/policies/: policy_concepts.hpp  policy_container.hpp  policy_macro_end.hpp  policy_ops.hpp
core/venus/tensor/: eager.hpp  eager_ops.hpp  shape.hpp  tensor.hpp  tensor_iterator.hpp
demo/: CMakeLists.txt  broadcasting.cpp  check_order.cpp  eager_tensor.cpp  einsum.cpp  mem_pool.cpp  naive_conv2d.cpp  print_tensor.cpp  scalar_tensor.cpp  string_tensor.cpp  tensor_indexing.cpp  tensor_mask.cpp  tensor_mem_pool_reuse.cpp  tensor_multiplication.cpp  tensor_range.cpp
repl/: pretty_print.hpp
scripts/: CMakeLists.txt  generate_venus_header.sh  make_single_header.cpp
single_include/: venus.hpp
test/: CMakeLists.txt  test_sequential.cpp  test_var_type_dict.cpp
test/memory/: test_allocators.cpp  test_contiguous_memory.cpp
test/policies/: test_has_non_trivial_policy.cpp  test_pick_policy_object.cpp  test_plain_policy.cpp  test_policy_change.cpp  test_policy_derive.cpp  test_policy_ops.cpp  test_policy_select.cpp  test_policy_subpicker.cpp
test/tensor/: test_shape.cpp  test_tensor.cpp  test_tensor_api.cpp  test_tensor_ops.cpp  test_tensor_range.cpp
tests/: CMakeLists.txt  test_sequential.cpp  test_var_type_dict.cpp
venus/: null_param.hpp  sequential.hpp  traits.hpp  var_type_dict.hpp
